--- a/assets/views/main.html
+++ b/assets/views/main.html
@@ -1,5 +1,6 @@
 <div class="header">
-  <h3 class="text-muted">chatty</h3>
+	<h3 class="text-muted">chatty</h3>
+	<input type="text" ng-model="name" placeholder="Write username here">
 </div>
 
 <h4>Latest Chats:</h4>
@@ -9,6 +10,8 @@
 		<input ng-model="newMessage" type="text" placeholder="Hello!">
 	</form>
 
-	<div ng-repeat="message in messages track by $index">{{ message }}</div>
+	<div ng-repeat="message in messages track by $index">
+			<span><img ng-src="{{profile}}" style="width: 75px; border-radius: 100%"><h4>{{name}}</h4></span> {{message.message}} : {{message.time | date :'shortTime'}}
+		</div>
 
 </div>
