--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -25,12 +25,44 @@ body {
 }
 
 /* Custom page footer */
+.messages{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.messager{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+}
+.profile-img{
+  padding: 2px;
+}
+.messageBox{
+  padding: 10px;
+  float: left;
+}
+.user{
+  font-size: 16px;
+  margin: 10px;
+  padding: 2px;
+  min-width: 20px;
+  float: left;
+}
+.profile{
+  border-radius: 100%;
+  width: 75px;
+  padding: 2px;
+}
 .footer {
   padding-top: 19px;
   color: #777;
   border-top: 1px solid #e5e5e5;
 }
-
+.messager:nth-child(even) {
+  background: #C7C6C6;
+}
 /* Customize container */
 @media (min-width: 768px) {
   .container {
@@ -58,6 +90,9 @@ body {
 .marketing p + h4 {
   margin-top: 28px;
 }
+
+
+
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
